# jn_comfyui

./: LICENSE  README.md  Session.vim  __init__.py  jncomfy.yaml.example  prestartup_script.py  pyproject.toml  requirements.txt  utils.py
config/: __init__.py
extra/facelib/detection/: matlab_cp2tform.py
extra/facelib/detection/yolov5face/models/: yolo.py
extra/facelib/detection/yolov5face/utils/: autoanchor.py
extra/facelib/utils/: face_restoration_helper.py  misc.py
extra/meow/: base_model.py  model.py
extra/meow/hrtf/models/: __init__.py
extra/meow/hrtf/models/hrtf/: __init__.py  hrtf.py
extra/meow/tts/models/: __init__.py  base.py  coarse.py  encodec.py  fine.py  semantic.py
extra/meow/tts/models/gpt/: gpt.py  gpt_fine.py
extra/meow/tts/models/hubert/: __init__.py  hubert.py  hubert_tokenizer.py
extra/meow/utils/: __init__.py  audio_format.py
extra/meow/vc/models/: __init__.py
extra/meow/vc/models/freevc/: __init__.py  commons.py  mel_processing.py  models.py  modules.py  utils.py
extra/meow/vc/models/speaker_encoder/: __init__.py  audio.py  compute_embed.py  hparams.py  inference.py  model.py  params_data.py  (+5 more)
js/: multipleInputs.js  patch.js  rerouteNode.js
nodes/: audio.py  facerestore.py  image.py  meow.py  other.py  patch.py  primitive.py  primitive_conversion.py  primitive_process.py  sampling.py  workflow.py
nodes/facerestore/: __init__.py
patch/: __init__.py  comfy_ldm_modules_attention.py  comfy_ldm_modules_diffusionmodules_model.py  comfy_model_management.py  comfy_sd.py  comfy_utils.py  execution.py  latent_preview.py
(+12 files in other folders)
